aws-appmesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oe-stage
  labels:
    mesh: my-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
